inou/prp/tests/errors/reg_in_comb_uninit.prp
/*
:name: reg_in_comb_uninit
:type: error
:error: comb
*/
// todo/livehd/2f-latch M0 fail-closed test.
//
// Ruling (user, 2026-07-20): a `comb` may hold NO reg, latch or not —
// combinational logic is all at cycle 0 and holds no state.
//
// The reg-in-comb check used to live ONLY on the assignment form
// (process_lvalue_for_assign), i.e. it keyed on the INITIALIZER. An
// uninitialized `reg r:u8` is a bare declaration_statement with no rvalue, so it
// sailed straight past and surfaced far downstream as tolg's baffling
// "instance of clocked 'c' but 'top' has no clock to forward (needs_clock bug)"
// — a message that names neither the reg nor the comb.
//
// This hole is why the six latch fixtures originally compiled as `comb`; they
// are `pub mod` now. A latch is spelled `reg l:T:[latch=true]`, so closing the
// hole covers latches too.
//
// The initialized twin (`reg r:u8 = 0` in a comb) already errored before this
// fix; this fixture pins the UNINITIALIZED case.
pub mod top(a:u8) -> (q:u8@[0]) {
  q = c(a)
}
comb c(x:u8) -> (y:u8) {
  reg r:u8
  r = x
  y = r
}
